About: A basic hurricane simulator made for the Hypothetical Hurricanes Wiki. Soon to be more advanced.

v20181109b:
    + Readded environmental wobble
    * Optimized environmental fields for future saving & loading of basins
v20181109a:
    * Changed snow-rendering algorithm for faster and more efficient rendering
v20181105a:
    + Added code for a graphical shader that gives land some shadows and visible depth
        > Disabled until user settings are added since it increases render times
    * Adjustments to SST anomalies to use a more logarithmic system, and have greater anomalies closer to the poles
    * Definition SST values for equatorward and poleward edges at peak-season and peak-off-season moved to constants.js
v20181102a:
    * Reworked land to work more efficiently with cleaner code
    * SST map layers now render more nicely with the land and are now less laggy when the sim is running
    * Clicking the map layer text/button in the bottom now rotates through the map layers
    * The data displayed in the map layer button now shows that at the position of the selected storm if one is selected
        > includes indicator for if the data is "@ mouse pointer / finger" or "@ selected storm"
        > if the selected storm is not active at the time viewed in analysis, data for the mouse pointer / finger is displayed
v20181031a:
    + Added sea surface temperature
    + Added sea surface temperature anomaly
    + Added some UI at the bottom for environmental fields and map layers
    * Fixed an accidental two "v"s in the version number
    * Storm strength algorithm now takes SST into account
    * Storms weaken faster upon landfall
    * Steering tweaks
    * "E" now rotates through 3 environmental fields: LLSteering, SSTAnomaly, and SST
v20181030a:
    * Steering is now much less drunk
    * Fujiwhara improvements
v20181028a:
    + Added a "Start" button when the sim loads, which will initialize the sim upon being clicked